# Hierarchical-Urban-Systems

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: python-package.yml
countries_data/Belgium/: belgium.qgz
countries_data/Belgium/data/: assignment.csv  incoming_flows.pkl
countries_data/France/: france.qgz
countries_data/France/data/: fua_assignment.csv
countries_data/Italy/: italy.qgz
countries_data/Italy/data/: assignment.csv
countries_data/Suisse/: switzerland.qgz
countries_data/Suisse/data/: assignment.csv  incoming_flows.pkl
countries_data/USA/: usa.qgz
countries_data/USA/data/: assignment.csv  (+2 more)
docs/: ALGORITHM.md
hierarchical_urban_systems/: alias.py  constants.py
hierarchical_urban_systems/centers_detector/: centers_detector.py  flows_feature_extractor.py  nodes_assignment_score.py
hierarchical_urban_systems/debug/: compare_score_with_fua_france.py  rename_flows_column_names.py  run_centers_detection.py  save_local_indirect_flows.py
hierarchical_urban_systems/examples/: detect_and_save_centers_assignment_switzerland.py  detect_centers_in_custom_flows.py  run_examples.py
hierarchical_urban_systems/flows_handler/: country.py  flows_handler.py
hierarchical_urban_systems/utils/: debug_utils.py  sp_utils.py
test_hierarchical_urban_systems/test_centers_detector/: conftest.py  test_centers_detector.py  test_flows_feature_extractor.py  test_nodes_assignment_score.py
test_hierarchical_urban_systems/test_flows_handler/: test_flows_handler.py
test_hierarchical_urban_systems/test_utils/: test_sp_utils.py
(+19 files in other folders)
